--- a/Site Under Construction.htm
+++ b/Site Under Construction.htm
@@ -6,7 +6,8 @@
 <title>Site Under Construction</title>
 <style type="text/css">
 body {
-	background-image: url(http://i294.photobucket.com/albums/mm99/Ryder17z/FCZ/bg.png);
+	background-image: url(Site%20Under%20Construction_files//bg.png);
+	background-size: 100% 100%;
 }
 </style>
 <style type="text/css">
